--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   timeago: ^3.0.2
   flutter_spinkit: ^5.0.0
   location: ^4.1.1
+  google_maps_flutter: ^0.5.24+1
+
 
 
   # The following adds the Cupertino Icons font to your application.
