add icon for app

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.chatify">
    <application
-        android:label="chatify"
+        android:label="Survival Map"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
