--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,10 @@ dependencies:
   timeago: ^3.0.2
   flutter_spinkit: ^5.0.0
   location: ^4.1.1
+  geolocator: ^7.1.0
   google_maps_flutter: ^0.5.24+1
+  geocoder: ^0.2.1
+
 
 
 
