--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   geolocator: ^7.1.0
   google_maps_flutter: ^0.5.24+1
   geocoder: ^0.2.1
+  flutter_svg: ^0.22.0
 
 
 
@@ -70,6 +71,7 @@ flutter:
     - lib/ima/SC4.jpeg
     - lib/ima/SE4.jpeg
     - lib/ima/SW4.jpeg
+    - assets/icons/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
