--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   firebase_analytics: ^5.0.0
   firebase_auth: ^0.14.0
   firebase_storage: ^3.0.0
+  firebase_messaging: ^6.0.12
   cloud_firestore: ^0.12.0+2
   provider: ^4.0.0
   image_picker: ^0.6.3+4
